--- a/src/app/main/main.component.less
+++ b/src/app/main/main.component.less
@@ -16,6 +16,9 @@
   margin: auto;
   padding: 10px;
   display: flex;
+  border-top: 1px solid lightgray;
+  border-bottom: 1px solid lightgray;
+
 
   &__button {
     color: black;
