--- a/src/app/incidents/incident-form/incident-form.component.less
+++ b/src/app/incidents/incident-form/incident-form.component.less
@@ -94,7 +94,7 @@
 .validtext {
   visibility: visible;
   width: 100%;
-  background-color: #ed2328;
+  background-color: lightgray;
   color: black;
   text-align: center;
   padding: 5px 0;
@@ -104,7 +104,7 @@
   margin-bottom: 5px;
 }
 input.ng-touched.ng-invalid{
-  border:solid #ed2328 2px;
+  border:solid lightgray 2px;
 }
 input.ng-touched.ng-valid{
   border:solid mediumseagreen 2px;
