--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -13,13 +13,13 @@
 <main>
   <div class="tab">
     <div class="tab__event">
-      <button class="tab__button" (click)="showevents()">Events</button>
+      <button class="tab__button" (click)="showEvents()">Events</button>
     </div>
     <div class="tab__process">
       <button class="tab__button">Process</button>
     </div>
     <div class="tab__users">
-      <button class="tab__button" (click)="showusers()">Users</button>
+      <button class="tab__button" (click)="showUsers()">Users</button>
     </div>
   </div>
 </main>
