--- a/src/app/incidents/incidents.component.html
+++ b/src/app/incidents/incidents.component.html
@@ -11,7 +11,7 @@
   </div>
   <div class="events__table-body">
     <div *ngFor="let incident of incidents;" (click)="editIncident(incident._id)"
-         class="events__table-body-row">
+         class="events__table-body-row" appHover>
       <div class="events__table-body-column">
         <div class="events__table-readonly">{{incident.svg}}</div>
       </div>
