--- a/src/app/incidents/incidents.component.less
+++ b/src/app/incidents/incidents.component.less
@@ -55,6 +55,12 @@
     }
   }
 }
+.hovered {
+  transform: scale(1.01);
+  box-shadow: 0 0 4px rgba(0, 0, 0, .4);
+  /*transition: .2s all;*/
+  z-index: 10;
+}
 
 .red {
   background-color: red;
