--- a/src/app/users/users-form/users-form.component.html
+++ b/src/app/users/users-form/users-form.component.html
@@ -1,1 +1,68 @@
-<p>users-form works!</p>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8" />
+  <title>Project</title>
+</head>
+<body>
+<div class="users__form visible">
+  <div class="users__form-dialog">
+    <div class="users__form-content">
+      <div class="users__form-body">
+        <form *ngIf="action" noValidate [formGroup]="formUser" class="edit-incident"
+              (ngSubmit)="onSubmit()">
+
+          <div class="form-control">
+            <label class="form-control-label">Login:</label>
+            <input class="form-control-action" formControlName="login" type="string">
+            <div class="validtext"
+                 *ngIf="formUser.controls['login'].invalid && formUser.controls['login'].touched">
+            </div>
+          </div>
+
+          <div class="form-control">
+            <label class="form-control-label">Password:</label>
+            <input class="form-control-action" formControlName="password" type="string">
+            <div class="validtext"
+                 *ngIf="formUser.controls['password'].invalid && formUser.controls['password'].touched">
+            </div>
+          </div>
+
+          <div class="form-control">
+            <label class="form-control-label">Position:</label>
+            <input class="form-control-action" formControlName="position" type="string">
+            <div class="validtext"
+                 *ngIf="formUser.controls['position'].invalid && formUser.controls['position'].touched">
+            </div>
+          </div>
+
+          <div class="form-control">
+            <label class="form-control-label">User:</label>
+            <input class="form-control-action" formControlName="assignee" type="string">
+            <div class="validtext"
+                 *ngIf="formUser.controls['assignee'].invalid && formUser.controls['assignee'].touched">
+            </div>
+          </div>
+
+          <div class="form-control">
+            <label class="form-control-label">Birthday:</label>
+            <input class="form-control-date" formControlName="birthday" type="date">
+            <div class="validtext"
+                 *ngIf="formUser.controls['birthday'].invalid && formUser.controls['birthday'].touched">
+            </div>
+          </div>
+          <button class="transparent-button"
+                  routerLink="/users">Back</button>
+          <button class="transparent-button" *ngIf="action===1" type="submit">Add user</button>
+
+        </form>
+
+      </div>
+    </div>
+
+  </div>
+</div>
+
+</body>
+</html>
+<router-outlet></router-outlet>
