--- a/src/app/users/users-form/users-form.component.html
+++ b/src/app/users/users-form/users-form.component.html
@@ -41,6 +41,7 @@
             <input class="form-control-action" formControlName="assignee" type="string">
             <div class="validtext"
                  *ngIf="formUser.controls['assignee'].invalid && formUser.controls['assignee'].touched">
+                  Name must not contain numbers.
             </div>
           </div>
 
