--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -16,7 +16,7 @@
       <button class="tab__button" (click)="showEvents()">Events</button>
     </div>
     <div class="tab__process">
-      <button class="tab__button">Process</button>
+      <button class="tab__button" (click)="showProcess()">Process</button>
     </div>
     <div class="tab__users">
       <button class="tab__button" (click)="showUsers()">Users</button>
