--- a/src/app/main/main.component.less
+++ b/src/app/main/main.component.less
@@ -33,11 +33,11 @@
     transition: all 0.3s ease-out;
   }
   &__button:hover {
-       color: #ed2328;
+       color: slategray;
      }
   &__button:active {
-    border: solid #ed2328;
-    background: #ed2328;
+    border: solid slategray;
+    background: slategray;
     color: white;
   }
 }
