--- a/src/app/users/users-form/users-form.component.less
+++ b/src/app/users/users-form/users-form.component.less
@@ -101,7 +101,7 @@
   transition: all 0.3s ease-out;
 }
 .primary:hover{
-  background-color: #ed2328;
+  background-color: slategray;
   color: #fff;
 }
 
@@ -132,13 +132,13 @@ input.ng-touched.ng-valid{
   max-width: 200px;
   background: rgba(255, 255, 255, 0.5);
   border-radius: 8px;
-  color: #ed2328;
+  color: slategray;
   text-align: center;
   text-decoration: none;
   letter-spacing: 1px;
   transition: all 0.3s ease-out;
 }
 .transparent-button:hover{
-  background-color: #ed2328;
+  background-color: slategray;
   color: #fff;
 }
