--- a/src/app/users/users.component.less
+++ b/src/app/users/users.component.less
@@ -15,7 +15,7 @@
       transition: all 0.3s ease-out;
     }
     &-button:hover {
-      color: #ed2328;
+      color: slategray;
     }
     &-header {
       display: flex;
