--- a/src/app/incidents/incident-form/incident-form.component.less
+++ b/src/app/incidents/incident-form/incident-form.component.less
@@ -74,7 +74,14 @@
     margin-top: 5px;
     margin-bottom: 5px;
     padding: 5px;
+    &-two {
+    display: flex;
+    flex-direction: column;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    padding: 5px;
     border-bottom: 1px solid lightgray;
+    }
   }
 
 }
@@ -102,7 +109,7 @@
   transition: all 0.3s ease-out;
 }
 .primary:hover{
-  background-color: #ed2328;
+  background-color: slategray;
   color: #fff;
 }
 
@@ -127,20 +134,19 @@ input.ng-touched.ng-valid{
 
 .transparent-button {
   display: flex;
-  margin: 0 2px auto;
-  padding: 8px;
-  width: 80%;
-  max-width: 200px;
+  margin: auto;
+  padding: 8px 40%;
+  width: 100%;
+  /*max-width: 200px;*/
   background: rgba(255, 255, 255, 0.5);
   border-radius: 8px;
-  color: #ed2328;
-  text-align: center;
-  text-decoration: none;
+  color: slategray;
+  text-align-all: center;
   letter-spacing: 1px;
   transition: all 0.3s ease-out;
 }
 .transparent-button:hover{
-  background-color: #ed2328;
+  background-color: slategray;
   color: #fff;
 }
 
