--- a/src/app/incidents/incident-form/incident-form.component.less
+++ b/src/app/incidents/incident-form/incident-form.component.less
@@ -134,7 +134,7 @@ input.ng-touched.ng-valid{
 
 .transparent-button {
   display: flex;
-  margin: auto;
+  margin: 0 2px auto;
   padding: 8px 40%;
   width: 100%;
   /*max-width: 200px;*/
