--- a/src/app/incidents/incidents.component.html
+++ b/src/app/incidents/incidents.component.html
@@ -14,10 +14,10 @@
          class="events__table-body-row" appHover>
       <div class="events__table-body-column">
         <div class="events__table-readonly" >{{incident.svg}}
-          <svg width="22" height="22">
+<!--          <svg width="22" height="22">
             <circle r="8" cx="11" cy="12"
                     fill="orangered" stroke="crimson" stroke-width="3" />
-          </svg>
+          </svg>-->
         </div>
       </div>
       <div class="events__table-body-column">
