--- a/src/app/users/users-form/users-form.component.less
+++ b/src/app/users/users-form/users-form.component.less
@@ -127,14 +127,11 @@ input.ng-touched.ng-valid{
 .transparent-button {
   display: flex;
   margin: 0 2px auto;
-  padding: 8px;
-  width: 80%;
-  max-width: 200px;
+  padding: 8px 40%;
+  width: 100%;
   background: rgba(255, 255, 255, 0.5);
   border-radius: 8px;
   color: slategray;
-  text-align: center;
-  text-decoration: none;
   letter-spacing: 1px;
   transition: all 0.3s ease-out;
 }
