--- a/src/app/incidents/incident-form/incident-form.component.html
+++ b/src/app/incidents/incident-form/incident-form.component.html
@@ -57,7 +57,7 @@
                        *ngIf="formIncident.controls['startDate'].invalid && formIncident.controls['startDate'].touched">
                   </div>
               </div>
-              <div class="form-control-action-two" *ngIf="action === 2">{{formIncident.value.startDate}}</div>
+              <div class="form-control-action-two" *ngIf="action === 2">{{formIncident.value.startDate |  date: 'dd-MM-yyyy'}}</div>
           </div>
 
           <div class="form-control">
@@ -83,11 +83,15 @@
 
           <div class="form-control">
             <label class="form-control-label">Status:</label>
+            <div class="form-control-action" *ngIf="action === 1">{{formIncident.value.status}}
+            </div>
+            <div class="form-control-action-two" *ngIf="action === 2">
             <select class="form-control-action" formControlName="status">
               <option *ngFor="let status of statuses" [value]="status.status">
                 {{ status.status}}
               </option>
             </select>
+            </div>
           </div>
 
           <div class="form-control">
