--- a/src/app/process/process.component.html
+++ b/src/app/process/process.component.html
@@ -1,13 +1,9 @@
 <div class="process__table">
-  <div class="process__table-box">Open</div>
-  <div class="process__table-box">Re-start</div>
-  <div class="process__table-box">In operation</div>
-  <div class="process__table-box">Additional information</div>
-  <div class="process__table-box">Additional information received</div>
-  <div class="process__table-box">Resolved</div>
-  <div class="process__table-box">Checked</div>
-  <div class="process__table-box">Closed</div>
-  <div class="process__table-box">Marriage</div>
-
+  <div class="process__table-header">
+    <img src="blockDiagram.jpg">
+    <div class="process__table-header-column"></div>
+    <div class="process__table-header-column">Status</div>
+    <div class="process__table-header-column">Description</div>
+    <div class="process__table-header-column">Incidents</div>
+  </div>
 </div>
-
