--- a/src/app/process/process.component.html
+++ b/src/app/process/process.component.html
@@ -1,9 +1,10 @@
 <div class="process__table">
-  <div class="process__table-header">
-    <img src="blockDiagram.jpg">
+  <img class="process__table-block" src="./assets/images/blockDiagram.png" alt="BlockDiagram">
+<!--  <div class="process__table-header">
+
     <div class="process__table-header-column"></div>
     <div class="process__table-header-column">Status</div>
     <div class="process__table-header-column">Description</div>
     <div class="process__table-header-column">Incidents</div>
-  </div>
+  </div>-->
 </div>
