--- a/src/app/process/process.component.less
+++ b/src/app/process/process.component.less
@@ -4,10 +4,16 @@
     width: 70%;
     margin: auto;
 
+    &-block {
+      width: 100%;
+      margin: auto;
+      visibility: visible;
+    }
 
     &-header {
       display: flex;
       flex-wrap: nowrap;
+
 
       &-column {
         flex: 0 1 calc((100vw - 40px) / 4);
