--- a/src/app/process/process.component.less
+++ b/src/app/process/process.component.less
@@ -4,7 +4,11 @@
     width: 70%;
     margin: auto;
 
+
     &-block {
+      width: 100%;
+      margin: 0 0 0 50px;
+      background-size: contain;
     }
 
     &-header {
