--- a/src/app/main/main.component.less
+++ b/src/app/main/main.component.less
@@ -13,8 +13,9 @@
 }
 .tab {
   width: 70%;
+  background: white;
   margin: auto;
-  padding: 10px;
+  padding: 10px 0 10px 0;
   display: flex;
   border-top: 1px solid lightgray;
   border-bottom: 1px solid lightgray;
