--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,5 +1,5 @@
 <div class="users__table">
-  <button class="users__table-button" (click)="addUser()">Add</button>
+  <button class="users__table-button" (click)="addUser()">Add user</button>
   <div class="users__table-header">
     <div class="users__table-header-column">Position</div>
     <div class="users__table-header-column">User</div>
