--- a/src/app/users/users.component.less
+++ b/src/app/users/users.component.less
@@ -3,8 +3,10 @@
   &__table {
     width: 70%;
     margin: auto;
+    background: white;
     &-button {
       color: black;
+      padding: 10px;
       border: solid white;
       background: white;
       display: inline-block;
