--- a/src/app/incidents/incidents.component.less
+++ b/src/app/incidents/incidents.component.less
@@ -3,6 +3,7 @@
   &__table {
     width: 70%;
     margin: auto;
+    background: white;
     &-button {
       color: black;
       border: solid white;
