--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -6,7 +6,7 @@
     <div class="users__table-header-column">Birthday</div>
   </div>
   <div class="users__table-body">
-    <div *ngFor="let user of users;" class="users__table-body-row">
+    <div *ngFor="let user of users;" class="users__table-body-row" >
       <div class="users__table-body-column">
         <div class="users__table-readonly">{{user.position}}</div>
       </div>
@@ -16,7 +16,11 @@
       <div class="users__table-body-column">
         <div class="users__table-readonly">{{user.birthday | date: 'dd-MM-yyyy'}}</div>
       </div>
+<!--      <div class="users__table-body-column">
+        <button (click)="delete(user._id)"></button>
+      </div>-->
     </div>
   </div>
 </div>
 <router-outlet (deactivate)="actions($event)"></router-outlet>
+<!--<router-outlet></router-outlet>-->
