--- a/src/app/incidents/incidents.component.less
+++ b/src/app/incidents/incidents.component.less
@@ -6,6 +6,7 @@
     background: white;
     &-button {
       color: black;
+      padding: 10px;
       border: solid white;
       background: white;
       display: inline-block;
